# New_git

./: .gitignore  CMakeLists.txt
ProjectCM/: CMakeLists.txt  ProjectCM.cpp  ProjectCM.h
ProjectCM/include/: classColorShape.h  classColoredRectangle.h  classColoredTriangle.h  classRectangle.h  classShape.h  classTriangle.h
ProjectCM/src/: classColorShape.cpp  classColoredRectangle.cpp  classColoredTriangle.cpp  classRectangle.cpp  classShape.cpp  classTriangle.cpp  main.cpp
